<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.JohnZero.lock.activity.HelpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="帮助"
        android:textColor="#aaff00"
        android:textSize="30sp"
        android:background="#ff0000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Q1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="Q1"
                android:textSize="35sp"
                android:textColor="#ffaaff"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center_vertical"
                android:layout_toRightOf="@id/Q1"
                android:layout_marginLeft="10dp"
                android:layout_alignParentBottom="true"
                android:text="@string/Q1"
                android:textSize="15sp"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="5dp"
            android:text="@string/Q1A"
            android:textSize="15sp"
            android:textColor="#000000"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Q2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="Q2"
                android:textSize="35sp"
                android:textColor="#ffaaff"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center_vertical"
                android:layout_toRightOf="@id/Q2"
                android:layout_marginLeft="10dp"
                android:layout_alignParentBottom="true"
                android:text="@string/Q2"
                android:textSize="15sp"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="5dp"
            android:text="@string/Q2A"
            android:textSize="15sp"
            android:textColor="#000000"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Q3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="Q3"
                android:textSize="35sp"
                android:textColor="#ffaaff"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center_vertical"
                android:layout_toRightOf="@id/Q3"
                android:layout_marginLeft="10dp"
                android:layout_alignParentBottom="true"
                android:text="@string/Q3"
                android:textSize="15sp"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="5dp"
            android:text="@string/Q3A"
            android:textSize="15sp"
            android:textColor="#000000"/>

    </LinearLayout>

</LinearLayout>